fix media actions button alignment when there is no paging element CV2-3729

--- a/src/app/components/media/media.module.css
+++ b/src/app/components/media/media.module.css
@@ -34,8 +34,9 @@
     .media-actions {
       align-items: center;
       display: flex;
+      flex: 1 1 auto;
       gap: 8px;
-      justify-content: space-between;
+      justify-content: flex-end;
     }
   }
 
